--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -158,7 +158,7 @@
 </ul>
 
 <ul>
-<li>Note ¹: A <i>c</i> in Quenya is always pronounce like a “hard c” in English, so <i>cir-</i> is pronounced “kir-” not “sir-”. Thus <i>cir-</i> “to cut” is <u>not</u> pronounced like English “circus”, and if <i>circus</i> was a Quenya word it would be pronounced “kirkus” (or more exactly “keerkoos”, see the next note). This is such a common mispronunciation that some writers of Quenya use <i>k</i> instead of <i>c</i> (as Tolkien himself did sometimes), but this course uses <i>c</i> because that’s what Tolkien did in <i>The Lord of the Rings</i>.</li>
+<li>Note ¹: A <i>c</i> in Quenya is always pronounced like a “hard c” in English, so <i>cir-</i> is pronounced “kir-” not “sir-”. Thus <i>cir-</i> “to cut” is <u>not</u> pronounced like English “circus”, and if <i>circus</i> was a Quenya word it would be pronounced “kirkus” (or more exactly “keerkoos”, see the next note). This is such a common mispronunciation that some writers of Quenya use <i>k</i> instead of <i>c</i> (as Tolkien himself did sometimes), but this course uses <i>c</i> because that’s what Tolkien did in <i>The Lord of the Rings</i>.</li>
 <li>Note ²: Vowels in Quenya are pronounced more or less like vowels in Italian: <i>i</i> = “ee”, <i>e</i> = “eh”, <i>a</i> = “ah”, <i>o</i> = “oh”, <i>u</i> = “oo”. Thus the verbs <i>cir-</i>, <i>men-</i>, <i>mat-</i>, <i>lor-</i>, <i>tuv-</i> are pronounced “k(ee)r-”, “m(eh)n-”, “m(ah)t-”, “l(oh)r-”, “t(oo)v-”. More information on pronunciation appears in <a href="eldamo-intro-quenya-02.html#c2-1">Chapter 2, Section §2.1</a>.</li>
 </ul>
 
@@ -215,7 +215,7 @@
 <li><b>Perfect</b> by (a) prefixing and then lengthening the base vowel and (b) adding the suffix <i>-ië</i>: <i>nor-</i> “to run” → <i>onórië</i> “has run”.</li>
 </ul>
 
-<p>The past tense “incorporates” the past suffix <i>-në</i> in complex ways. For example, sometimes the <i>n</i> is inserted into the middle of the verb stem instead of added at the end: <i>mat-</i> “to eat” → <i>mantë</i> “ate”. As for the perfect, for now you can think of it as another way of talking about the past, but specifically for <u>completed</u> actions: <i>i orco mantë i aiwë</i> “the orc ate the bird (at some point in the past)” vs. <i>i orco amátië i aiwë</i> “the orc has eaten the bird (and is done eating it)”.</p>
+<p>The past tense “incorporates” the past suffix <i>-në</i> in complex ways. For example, sometimes the <i>n</i> is inserted into the middle of the verb stem instead of added at the end: <i>mat-</i> “to eat” → <i>mantë</i> “ate”. As for the perfect, for now you can think of it as another way of talking about the past, but specifically for <u>completed</u> actions: <i>i orco amátië i aiwë</i> “the orc has eaten the bird (and is done eating it)” vs. <i>i orco mantë i aiwë</i> “the orc ate the bird (at some point in the past)”.</p>
 
 <p>The past and perfect are quite complicated and will be covered in more detail in <a href="eldamo-intro-quenya-04.html#c4-4">Chapter 4, Section §4.4</a> and <a href="eldamo-intro-quenya-05.html#c5-4">Chapter 5, Section §5.4</a>, while the future is covered in <a href="eldamo-intro-quenya-03.html#c3-4-1">Chapter 3, Section §3.4.1</a>. For now you just need to be aware these tenses exist.</p>
 
@@ -751,7 +751,7 @@
 <li><b>Locative:</b> pl. <i>-(i)ssen</i> “at, in, on”.</li>
 </ul>
 
-<p>Unlike the genitive, the plural directional suffixes are added to the base noun rather than its plural, and the joining vowel with consonantal nouns become <i>i</i> rather than <i>e</i>: <i>ambollon</i> (<i>ambo-llon</i>) “from hills” vs. <i>mindoninnar</i> (<i>mindon-innar</i>) “towards towers”. The joining vowel <i>i</i> is <u>not</u> the plural suffix, and nouns ending in <i>e</i> add the unmodified case suffix directly to the base noun: <i>tauressen</i> (<i>taure-ssen</i>) “in forests”, not **<i>taurissen</i>. For the plural ablative (= “away from”), Tolkien used both <i>-(i)llon</i> and <i>-(i)llor</i>, so either is acceptable.</p>
+<p>Unlike the genitive, the plural directional suffixes are added to the base noun rather than its plural, and the joining vowel with consonantal nouns become <i>i</i> rather than <i>e</i>: <i>mindoninnar</i> (<i>mindon-innar</i>) “towards towers” vs. <i>ambollon</i> (<i>ambo-llon</i>) “from hills”. The joining vowel <i>i</i> is <u>not</u> the plural suffix, and nouns ending in <i>e</i> add the unmodified case suffix directly to the base noun: <i>tauressen</i> (<i>taure-ssen</i>) “in forests”, not **<i>taurissen</i>. For the plural ablative (= “away from”), Tolkien used both <i>-(i)llon</i> and <i>-(i)llor</i>, so either is acceptable.</p>
 
 <p>Some more examples:</p>
 
