--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -186,7 +186,7 @@
 </ul>
 
 <div class="advanced-topic">
-<p><a id="c2-1-2-4"></a><b>2.1.2.4 How do we know this?</b> As with the previous section, this discussion of diphthongs is based on Appendix E of <i>The Lord of the Rings</i>, where Tolkien said <i>ai, oi, ui</i> are pronounced like “rye, boy, ruin” and <i>iu, au</i> like “yule, loud”. He also gave no English equivalent of <i>eu</i>, since there isn’t a good example. The example “ruin” is also not a great example, since as noted above its usual English pronunciation is as two syllables: “roo-in”. If you mash it into one syllable, though, it is a reasonable approximation of Quenya <i>ui</i>. Personally I tend to (mis)pronounce <i>ui</i> as the rising diphthong “wee” because it is easier for my English-trained mouth to form, but strictly speaking it is a falling diphthong: IPA <i>uı̯</i>. The only falling diphthong in Quenya is <i>iu</i> (“yoo”) and that is only the case in Third Age pronunciation: in the classical Quenya <i>iu</i> was also a rising diphthong.</p>
+<p><a id="c2-1-2-4"></a><b>2.1.2.4 How do we know this?</b> As with the previous section, this discussion of diphthongs is based on Appendix E of <i>The Lord of the Rings</i>, where Tolkien said <i>ai, oi, ui</i> are pronounced like “rye, boy, ruin” and <i>iu, au</i> like “yule, loud”. He also gave no English equivalent of <i>eu</i>, since there isn’t a good example. The example “ruin” is also not a great example, since as noted above its usual English pronunciation is as two syllables: “roo-in”. If you mash it into one syllable, though, it is a reasonable approximation of Quenya <i>ui</i>. Personally I tend to (mis)pronounce <i>ui</i> as the rising diphthong “wee” because it is easier for my English-trained mouth to form, but strictly speaking it is a falling diphthong: IPA <i>uı̯</i>. The only rising diphthong in Quenya is <i>iu</i> (“yoo”) and that is only the case in Third Age pronunciation: in the classical Quenya <i>iu</i> was also a falling diphthong.</p>
 </div>
 
 <h2><a id="c2-1-3"></a>2.1.3 Stress</h2>
@@ -1524,7 +1524,7 @@
 
 <p>However, it was not this ceremony that “sealed” the marriage, but rather the first act of procreation between the spouses. This sexual union of <i>yermë</i> also sealed and strengthened the <i>melmë</i> between them into a permanent bond. In circumstances of isolation two Elves could “marry each other” through this act of <i>yermë</i> without the trappings of ceremony, and such marriages were as legitimate and permanent as the more formal ones. In ordinary circumstances, a period of child rearing followed soon after marriage.</p>
 
-<p>Despite their immortality, the Elves tended to have children when they were young, soon after adulthood and in the early days of their marriage. Most elvish households had only a few children, no more than four being normal. Large families like the seven sons of Fëanor where extraordinary (and no one else matched Fëanor’s count). Though Elves remained physically strong throughout their life, the act of procreation taxed their spirits. After a certain number of children (varying by individual), an Elf lost the ability and desire to have more. After this “Time of the Children” the marriage entered a long period of a close but not sexual relationship, with <i>yermë</i> lost but <i>melmë</i> remaining.</p>
+<p>Despite their immortality, the Elves tended to have children when they were young, soon after adulthood and in the early days of their marriage. Most elvish households had only a few children, no more than four being normal. Large families like the seven sons of Fëanor were extraordinary (and no one else matched Fëanor’s count). Though Elves remained physically strong throughout their life, the act of procreation taxed their spirits. After a certain number of children (varying by individual), an Elf lost the ability and desire to have more. After this “Time of the Children” the marriage entered a long period of a close but not sexual relationship, with <i>yermë</i> lost but <i>melmë</i> remaining.</p>
 
 <p>Elvish marriages were permanent, and given their immortality this basically meant they were eternal. Divorce was not possible, and remarriage was allowed only in the most extraordinary circumstances, where one of the spouses died and also refused to reembody, remaining forever within the halls of Mandos. The only known instance of remarriage within the tales is that of Finwë to Indis after the death of his first wife Míriel. The permanence of Elvish marriage was less onerous than it might seem, since most Elves were able to find “soul mates” with whom permanent union was a joy. One of the tragedies of the unions between Elves and Men is that the love and marriage between them remained permanent, but the bodies and spirits were soon parted.</p>
 
@@ -1578,7 +1578,7 @@
 <li><b>veri</b> <i>n.</i> “wife”</li>
 <li><b>veru</b> <i>n.</i> “husband”</li>
 <li><b>veryanwë</b> <i>n.</i> “wedding”</li>
-<li><b>vesta</b> <i>n.</i> “marriage”</li>
+<li><b>vesta</b> <i>n.</i> “matrimony, marriage”</li>
 <li><b>vesta-</b> <i>v.</i> “to wed, marry”
 <ul><li><i>pa.t.</i> *<b>vestanë</b> “wedded, married”</li></ul></li>
 <li><b>vinimo</b> [<b>w-</b>] <i>n.</i> “baby”</li>
@@ -1989,7 +1989,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>veri</b> <i>n.</i> “wife”</li>
 <li><b>veru</b> <i>n.</i> “husband”</li>
 <li><b>veryanwë</b> <i>n.</i> “wedding”</li>
-<li><b>vesta</b> <i>n.</i> “marriage”</li>
+<li><b>vesta</b> <i>n.</i> “matrimony, marriage”</li>
 <li><b>vesta-</b> <i>v.</i> “to wed, marry”
 <ul><li><i>pa.t.</i> *<b>vestanë</b> “wedded, married”</li></ul></li>
 <li><b>vinimo</b> [<b>w-</b>] <i>n.</i> “baby”</li>
