--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -293,7 +293,7 @@
 
 <ul class="vocab-list">
 <li><span class="tengwar">1Î</span>: <i><span style="color:red">ty</span>elpë</i>
-- <span class="tengwar"><span style="color:red">1Î</span>RjqR</span> “silver”</li>
+- <span class="tengwar"><span style="color:red">1Î</span>RjqR</span> “silver” ¹</li>
 <li><span class="tengwar">2Ì</span>: <i>i<span style="color:red">ndy</span>o</i>
 - <span class="tengwar">`B<span style="color:red">2Ì</span>^</span> “grandson”</li>
 <li><span class="tengwar">4Ì</span>: <i>i<span style="color:red">nty</span>a</i>
@@ -301,13 +301,14 @@
 <li><span class="tengwar">5Ì</span>: <i><span style="color:red">ny</span>ellë</i>
 - <span class="tengwar"><span style="color:red">5Ì</span>$j¸R</span> “bell”</li>
 <li><span class="tengwar">7Ï</span>: <i>a<span style="color:red">ry</span>a</i>
-- <span class="tengwar">`C<span style="color:red">7Ï</span>E</span> “day (12 hours)” ¹</li>
+- <span class="tengwar">`C<span style="color:red">7Ï</span>E</span> “day (12 hours)” ²</li>
 <li><span class="tengwar">j´</span>: <i>a<span style="color:red">ly</span>a</i>
 - <span class="tengwar">`C<span style="color:red">j´</span>E</span> “rich, prosperous”</li>
 </ul>
 
-<ul class="advanced-topic">
-<li>Note ¹: The 1940s word <i>arya</i> doesn’t seem to be compatible with Tolkien’s later “daytime” words like <i>aurë</i>, so while we are using it here as an example of 1940s tengwar names, it won’t appear again in this course. The other 1940s names, though, are largely compatible with Tolkien’s later writing.</li>
+<ul>
+<li>Note ¹: The form <i>tyelpë</i> is archaic, the classical Quenya word for “silver”. In modern Quenya, this word has been modified to <i>telpë</i> borrowing from Telerin (LR/367; PM/356). The more archaic form is still used as the name for the <i>tyelpetéma</i> series, however (LotR/1120).</li>
+<li>Note ²: The 1940s word <i>arya</i> doesn’t seem to be compatible with Tolkien’s later “daytime” words like <i>aurë</i>, so while we are using it here as an example of 1940s tengwar names, it won’t appear again in this course. The other 1940s names, though, are largely compatible with Tolkien’s later writing.</li>
 </ul>
 
 <p>Tolkien didn’t give names for <span class="transcribe" data-lang="q" data-value="y">y</span> and <span class="transcribe" data-lang="q" data-value="hy">hy</span>. Personally I’d call them <i>anna unutixëa</i> “<i>anna</i> underdotted” and <i>hyarmen unutixëa</i> “<i>hyarmen</i> underdotted”. Some examples of their use:</p>
@@ -381,7 +382,7 @@
 
 <h2><a id="c5-1-4"></a>5.1.4 Vocabulary: Tengwar Names II</h2>
 
-<p>Here are more tengwar names, including the 1940s-names for the <i>tyelpetéma</i> series (excluding the somewhat dubious <i>arya</i>):</p>
+<p>Here are more tengwar names, including the 1940s-names for the <i>tyelpetéma</i> series (excluding the probably abandoned <i>arya</i>):</p>
 
 <ul class="vocab-list">
 <li>5. <span class="tengwar">2</span>: <i>a<span style="color:red">nd</span>o</i>
@@ -677,7 +678,7 @@
 associated, as head and foot, top and bottom, up and down, young and old, men and women, etc. <i>Yo</i> is thus the equivalent of English “both ... and”, but a third item cannot be added (PE17/70).</p>
 </blockquote>
 
-<p>Thus <i>ar</i> “and” is used to join unconnected things but <i>yo</i> is used for associated duos, much like how the dual <i>-u/-t</i> is used for pairs vs. the number <i>atta</i> “two” for two arbitrary items. Words related to <i>yo</i> include the adjective <i>yúyo</i> “both” and the prefix <i>yu-</i> meaning “both, twi-”. When <i>yúyo</i> modifies a noun, the noun is left in the singular just like the number <i>atta</i> “two”: <i>yúyo má</i> “both hands”, not dual **<i>yúyo mát</i> or plural **<i>yúyo már</i> (VT49/10).</p>
+<p>Thus <i>ar</i> “and” is used to join unconnected things but <i>yo</i> is used for associated duos, much like how the dual <i>-u/-t</i> is used for pairs vs. the number <i>atta</i> “two” for two arbitrary items. Words related to <i>yo</i> include the adjective <i>yúyo</i> “both” and the prefix <i>yu-</i> meaning “both, twi-”. When <i>yúyo</i> modifies a noun, the noun is left in the singular just like the number <i>atta</i> “two”: <i>yúyo má</i> “both hands”, not dual **<i>yúyo mát</i> or plural **<i>yúyo már</i> (VT49/6).</p>
 
 <p><span class="advanced-topic">Speculative:</span> There is no special “dual form” for adjectives. However, dual nouns have adjectives in the singular rather than the plural: <i>linta atanu</i> “a swift pair of men” rather than **<i>lintë atanu</i>.</p>
 
@@ -701,7 +702,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p>Like plurals, duals mark the difference between exclusive <i>met/-mmë</i> “us/we two (but not you)” vs. inclusive <i>vet/-nquë</i> “both of us/we two”. For independent pronouns, duals mark the distinction between familiar <i>tyet</i> “you two (affectionate)” vs. polite <i>lyet</i> “you two (polite)”. This distinction is not made for the 2nd person dual subject suffix <i>-stë</i>, though the pronoun is usually interpreted as familiar (VT49/51). As usual, the possessive forms are the same as the subject forms with <i>e</i> changed to <i>a</i>, using a joining vowel <i>(e)</i> or <i>(i)</i> after consonantal nouns as with other possessive suffixes: <i>mindoninqua</i> “both of our tower”. Conceivably there is a 3rd. du. inanimate subject form <i>-tta</i>, but it is sufficiently obscure that if it is exists then it is probably barely used. The independent 3rd dual pronoun <i>tu</i> is both animate and inanimate (VT49/51).</p>
 
-<p><span class="advanced-topic">Speculative:</span> Note that when the <u>possessed</u> item is dual rather than the possessor, it is likely that the possessive suffix is added first before the dual, as usual. The net result would be that possessed nouns are declined like vocalic nouns and use the t-dual: <i>hendinyat</i> (<i>hend-inya-t</i>) “my (pair of) eyes” not **<i>hendunya</i>. Note, however, that <i>hendintu</i> (<i>hend-inta+u</i>) is likely for “their (pair of) eyes”. In this case the described eyes would still be dual despite the plurality of <i>-nta</i> “their” because each person has two eyes; see the next section.</p>
+<p><span class="advanced-topic">Speculative:</span> Note that when the <u>possessed</u> item is dual rather than the possessor, it is likely that the possessive suffix is added first before the dual, as usual. The net result would be that possessed nouns are declined like vocalic nouns and use the t-dual: <i>hendinyat</i> (<i>hend-inya-t</i>) “my (pair of) eyes” not **<i>hendunya</i>.</p>
 
 <div class="advanced-topic">
 <p><b>Alternate Theories:</b> The dual pronouns above are mostly based on a pair of pronoun charts from 1968 (VT49/16, 51), leaning more on the one from VT49/51. The dual pronouns were particular unstable, though, and Tolkien revised them nearly every time he examined them. For example, the familiar dual form <i>-ngwë</i> from VT49/16 is a popular alternative to <i>-nquë</i> from VT49/51. The possessive dual forms given above are very likely the ones associated with the corresponding subject pronouns, but the joining vowels <i>(e)</i> or <i>(i)</i> after consonantal nouns are just guesses. Likewise, the ordering of possessive pronoun suffixes before dual suffixes is also a guess.</p>
@@ -888,11 +889,10 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p><a id="c5-3-1-1"></a><b>5.3.1.1 Forming the Dative:</b> The dative noun case is formed as follows:</p>
 
 <ul>
-<li>The dative in most situations is formed by adding <i>-n</i> to the singular, plural or u-dual stem.</li>
+<li>The dative in most situations is formed by adding <i>-n</i> to the singular, plural, partitive plural or u-dual stem.</li>
 <li>For singular consonantal nouns, it is formed by adding <i>-en</i> to the stem, with a joining vowel <i>e</i>.</li>
 <li>For plural vocalic nouns, it is formed by adding <i>-in</i> to the noun stem.</li>
-<li>For duals normally formed with <i>-t</i> (<i>t</i>-duals), the dative dual is formed by adding <i>-nt</i> to the noun stem.</li>
-<li>For partive plurals, it is formed by adding <i>-(é)lin</i> to the stem, with <i>é</i> used after consonantal nouns.</li>
+<li>For duals that are normally formed with <i>-t</i> (<i>t</i>-duals), the dative dual is formed by adding <i>-nt</i> to the noun stem.</li>
 </ul>
 
 <p>For this noun case (and others) we will use <i>cirya</i> “ship” to represent most vocalic nouns, <i>lassë</i> “leaf” to represent e-nouns and <i>atar</i> “father” to represent consonantal nouns.</p>
@@ -927,7 +927,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p>The long dative illustrates a connection between the dative suffix <i>-n</i> “to, for” and the allative suffix <i>-nna</i> “to(wards)”. Both are derived from ancient root NA (the verb <i>anta-</i> “to give” is also related). In some respects, the dative suffix <i>-n</i> can be considered a “short allative” used for more abstract concepts that <i>-nna</i>. The allative <i>-nna</i> is specifically for movement in the direction of the declined noun, but <i>-n</i> marks the noun as a secondary beneficiary of the verb’s action. There are some cases where either might be used though: <i>quetin yeldenyan</i> or <i>quetin yeldenyanna</i> “I speak to my daughter”, though the latter would imply “I am speaking towards my daughter” indicating the conversion is more one-way.</p>
 
 <div class="advanced-topic">
-<p><a id="c5-3-1-5"></a><b>5.3.1.5 How do we know this?</b> Most of what we know about the dative noun declensions (and the declension of other noun cases) is from the so-called Plotz Letter, a 1966 or 67 letter from J.R.R. Tolkien to Richard Plotz which included a table of noun cases. This letter was first published in <i>Tolkien Language Notes 2</i> in 1974 and has been republished a number of times since then, so this set of declensions has been known to Elvish fans for a very long time and is well established. The letter has declensions for a vocalic noun <i>cirya</i> “ship” and an e-noun <i>lassë</i> “leaf”, but is missing any declensions for consonantal nouns.</p>
+<p><a id="c5-3-1-5"></a><b>5.3.1.5 How do we know this?</b> Most of what we know about the dative noun declensions (and the declension of other noun cases) is from the so-called Plotz Letter, a 1966 or 67 letter from J.R.R. Tolkien to Richard Plotz which included a table of noun cases (VT6/14). This letter was first published in <i>Tolkien Language Notes 2</i> in 1974 and has been republished a number of times since then, so this set of declensions has been known to Elvish fans for a very long time and is well established. The letter has declensions for a vocalic noun <i>cirya</i> “ship” and an e-noun <i>lassë</i> “leaf”, but is missing any declensions for consonantal nouns.</p>
 
 <p>That means the dative declensions for consonantal nouns are less well established than those of vocalic and e-nouns, but based on the dative <i>i ataren</i> “to the father” in Quenya prayers from the 1950s (VT43/37), there is a broad consensus that consonantal nouns use the joining vowel <i>e</i> in the singular. The main area of uncertainty is with duals and partitive plurals, but that uncertainty has more to do with the plural suffixes than the dative itself.</p>
 </div>
@@ -1080,7 +1080,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p>For a-stem and u-stem verbs, the <i>-ië</i> suffix replaces the final vowel. For <i>ya</i>-verbs (ending in the suffix <i>-ya</i>), the <i>-ië</i> suffix replaces the final <i>ya</i>: <i>orya-</i> “to rise” → <i>orórië</i> “has risen”; for the reduplicated <i>or</i>, see the next section.</p>
 
-<p><a id="c5-4-1-2"></a><b>5.4.1.2 Perfect Augments:</b> The augment is a special feature of the perfect tense. The augment is usually a copy of the verb’s base vowel prefixed to verb: <i>mat-</i> → <i><u>a</u>mátië</i>. There are some interesting variations, however. First, the augment itself is optional and can be omitted, especially in poetry (WJ/366). Thus a form like <i>mátië</i> is still a valid perfect, and such forms may be useful to get a particular metrical count in a song or poem.</p>
+<p><a id="c5-4-1-2"></a><b>5.4.1.2 Perfect Augments:</b> The augment is a special feature of the perfect tense. The augment is usually a copy of the verb’s base vowel prefixed to the verb: <i>mat-</i> → <i><u>a</u>mátië</i>. There are some interesting variations, however. First, the augment itself is optional and can be omitted, especially in poetry (WJ/366). Thus a form like <i>mátië</i> is still a valid perfect, and such forms may be useful to get a particular metrical count in a song or poem.</p>
 
 <p>Some verbs begin with a vowel and such verbs have no place to put a simple vowel augment. For <i>ala-</i> “to grow” and <i>orya-</i> “to raise”, the usual perfect would produce <i>álië</i> (PE22/164) or <i>órië</i> (PE17/77), with the augment “absorbed” by the base vowel. However it is also possible to reduplicate the first two letters of the verb, giving perfects like <i>alálië</i> and <i>orórië</i> (PE22/164). Such elaborated augments become more likely in cases where the base vowel cannot be lengthened: <i>orortië</i> the perfect of <i>orta-</i> “to raise” (PE22/159, 164).</p>
 
@@ -1685,10 +1685,14 @@ to whom the air gives kisses.
 <li><b>indyo</b> <i>n.</i> “grandson”</li>
 <li><b>intya</b> <i>n.</i> “guess, notion”</li>
 <li><b>nyellë</b> <i>n.</i> “bell”</li>
-<li><b>tyelpë</b> <i>n.</i> “silver, money”</li>
+<li>†<b>tyelpë</b> <i>n.</i> “silver (archaic)” ¹</li>
 <li><b>umbar</b> (<b>umbart-</b>) <i>n.</i> “fate”</li>
 <li><b>ungwë</b> <i>n.</i> “spider’s web”</li>
 <li><b>unquë</b> <i>n.</i> “a hollow”</li>
+</ul>
+
+<ul>
+<li>Note ¹: The form <i>tyelpë</i> is archaic, the classical Quenya word for “silver”. In modern Quenya, this word has been modified to <i>telpë</i> borrowing from Telerin (LR/367; PM/356). The more archaic form is still used as the name for the <i>tyelpetéma</i> series, however (LotR/1120).</li>
 </ul>
 
 <p><b><u>Parts of the Head:</u></b></p>
