--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
@@ -428,8 +428,8 @@
 <li><i>atan</i> → <i>atalli</i> “some men [humans]”.</li>
 <li><i>nér</i> (<i>ner-</i>) → <i>nelli</i> “some men [males]”.</li>
 <li><span class="advanced-topic">Speculative:</span> <i>cas</i> (<i>car-</i>) → <i>calli</i> “some heads”.</li>
-<li><span class="advanced-topic">Speculative:</span> <i>nat</i> → <i>nalti</i> “some things”.</li>
-<li><span class="advanced-topic">Speculative:</span> <i>hón</i> (<i>hom-</i>) → <i>holmi</i> “some hearts”.</li>
+<li><span class="advanced-topic">Speculative:</span> <i>nat</i> → <i>nateli</i> “some things”.</li>
+<li><span class="advanced-topic">Speculative:</span> <i>hón</i> (<i>hom-</i>) → <i>homeli</i> “some hearts”.</li>
 </ul>
 
 <p><span class="advanced-topic">Speculative:</span> Consonantal nouns with final clusters in their stem cannot assimilate, so they use a joining vowel <i>e</i>: <i>Moriquen-</i> (<i>Moriquend-</i>) → <i>Moriquendeli</i> “some Dark Elves”.</p>
@@ -449,7 +449,7 @@
 
 <p>The addition of the partitive plural suffix <i>-li</i> to vocalic nouns is straightforward: simply add the suffix to the vowel, the only complication being possible prosodic lengthening, as discussed above. With consonantal nouns things are less clear. We have only two examples: <i>Casalli</i> “some Dwarves” = <i>Casar</i> + <i>-li</i> (WJ/388) and <i>elelli</i> “some stars” = <i>elen</i> + <i>-li</i> (PE17/127). Both point to consonant assimilation rather than the use of a joining vowel. The other assimilations given above are speculative, based on what we know about the development of Quenya consonant combinations.</p>
 
-<p>Assimilation becomes impossible when clusters are involved, and so a joining vowel is probably used, but we don’t know what it might be. The most common guess is that the joining vowel is <i>e</i>, as it is with the directional noun cases <i>-(e)nna, -(e)llo, -(e)ssë</i>. Some people go further, advocating using the joining vowel <i>e</i> in combination with most single consonants as well to avoid awkward assimilations: <i>nateli</i> “some things” instead of <i>nalti</i>. I used to be in that camp myself, but more recently (2022) decided to advocate assimilation where possible, using the joining vowel only after consonant clusters.</p>
+<p>Assimilation becomes impossible when clusters are involved, and so a joining vowel is probably used, but we don’t know what it might be. The most common guess is that the joining vowel is <i>e</i>, as it is with the directional noun cases <i>-(e)nna, -(e)llo, -(e)ssë</i>. Some people go further, advocating using the joining vowel <i>e</i> in combination with most single consonants as well to avoid awkward assimilations: <i>nateli</i> “some things” instead of XXX <i>nalti</i>. I used to be in that camp myself, but more recently (2022) decided to advocate assimilation where possible, using the joining vowel only after consonant clusters.</p>
 </div>
 
 <h2><a id="c6-2-2"></a>6.2.2 Vocabulary: Animals</h2>
@@ -502,8 +502,8 @@
 <li><i>atan</i> → <i>atalli</i> “some men [humans]”.</li>
 <li><i>nér</i> (<i>ner-</i>) → <i>nelli</i> “some men [males]”.</li>
 <li><span class="advanced-topic">Speculative:</span> <i>cas</i> (<i>car-</i>) → <i>calli</i> “some heads”.</li>
-<li><span class="advanced-topic">Speculative:</span> <i>nat</i> → <i>nalti</i> “some things”.</li>
-<li><span class="advanced-topic">Speculative:</span> <i>hón</i> (<i>hom-</i>) → <i>holmi</i> “some hearts”.</li>
+<li><span class="advanced-topic">Speculative:</span> <i>nat</i> → <i>nateli</i> “some things”.</li>
+<li><span class="advanced-topic">Speculative:</span> <i>hón</i> (<i>hom-</i>) → <i>homeli</i> “some hearts”.</li>
 </ul></li>
 <li><b>Consonantal nouns</b> with stems ending in consonant clusters use <i>-eli</i>:
 <ul>
@@ -622,7 +622,7 @@
 <p>Genitives of nouns ending in <i>-ië</i> are awkward, since they would result in a sequence of three short vowels: <i>márië</i> → <i>máriëo</i> “of goodness”. To avoid this, a consonant <i>n</i> can be inserted before the genitive suffix; this will also trigger prosodic lengthening: <i>márié<u>n</u>o</i> (PE17/59). The extra <i>n</i> is unnecessary in the genitive plural: <i>máriéron</i> “of goodnesses (pl.)”.</p>
 
 <div class="advanced-topic">
-<p><a id="c6-2-1-3"></a><b>6.2.1.3 How do we know this?</b> As with other noun cases, most of what we know about how the genitive is formed comes from the so-called Plotz Letter, a 1966 or 67 letter from J.R.R. Tolkien to Richard Plotz which included a table of noun cases. That letter indicated that the genitive of <i>a</i>-nouns changed the final <i>a</i> to <i>o</i>: <i>ciryo</i> “of a ship”. We have other examples indicating the genitive of <i>o</i>-nouns remains unchanged, such as: <i>Indis i·Kiryamo</i> “The Mariner’s Wife” (UT/8). See below for a discussion of how we know the function of the genitive.</p>
+<p><a id="c6-2-1-3"></a><b>6.2.1.3 How do we know this?</b> As with other noun cases, most of what we know about how the genitive is formed comes from the so-called Plotz Letter, a 1966 or 67 letter from J.R.R. Tolkien to Richard Plotz which included a table of noun cases (VT6/14). That letter indicated that the genitive of <i>a</i>-nouns changed the final <i>a</i> to <i>o</i>: <i>ciryo</i> “of a ship”. We have other examples indicating the genitive of <i>o</i>-nouns remains unchanged, such as: <i>Indis i·Kiryamo</i> “The Mariner’s Wife” (UT/8). See below for a discussion of how we know the function of the genitive.</p>
 </div>
 
 <h2><a id="c6-3-2"></a>6.3.2 Possessive Case</h2>
@@ -676,7 +676,7 @@
 </ul>
 
 <div class="advanced-topic">
-<p><a id="c6-3-2-4"></a><b>6.3.2.4 How do we know this?</b> Again, most of what we know about how the possessive is formed comes from the so-called Plotz Letter. The possessives suffix <i>-wa</i> is fairly well attested for consonantal nouns with individual consonants: <i>andamacilwa</i> (PE17/147), <i>sindarinwa</i> (LotR/1123). It is less clear how the possessive suffix behaves after consonant clusters. Vocalized <i>-ua</i> is currently my best guess, following the suggestions of Raccoon: <a href="https://feophan.github.io/tenguesta_ngoldorinwa/morph/nou/#fifth-declension-nouns">https://feophan.github.io/tenguesta_ngoldorinwa/morph/nou/#fifth-declension-nouns</a>. The next section discusses how we know the function of the possessive-adjectival case.</p>
+<p><a id="c6-3-2-4"></a><b>6.3.2.4 How do we know this?</b> Again, most of what we know about how the possessive is formed comes from the so-called Plotz Letter (VT6/14). The possessives suffix <i>-wa</i> is fairly well attested for consonantal nouns with individual consonants: <i>andamacilwa</i> (PE17/147), <i>sindarinwa</i> (LotR/1123). It is less clear how the possessive suffix behaves after consonant clusters. Vocalized <i>-ua</i> is currently my best guess, following the suggestions of Raccoon: <a href="https://feophan.github.io/tenguesta_ngoldorinwa/morph/nou/#fifth-declension-nouns">https://feophan.github.io/tenguesta_ngoldorinwa/morph/nou/#fifth-declension-nouns</a>. The next section discusses how we know the function of the possessive-adjectival case.</p>
 </div>
 
 <h2><a id="c6-3-3"></a>6.3.3 Genitive vs. Possessive</h2>
@@ -1020,7 +1020,7 @@
 <li><b>eressëa</b> <i>adj.</i> “lonely”</li>
 <li><b>ilya</b> <i>adj.</i> “every, each” ¹</li>
 <li><b>ilyë</b> <i>adj.</i> “all [pl.]” ¹</li>
-<li><b>métima</b> <i>adj.</i> “last” ²</li>
+<li><b>métima</b> <i>adj.</i> “last [temporal]” ²</li>
 <li><b>not-</b> <i>v.</i> “to count”
 <ul><li><i>pa.t.</i> *<b>nontë</b> “counted”</li></ul></li>
 <li><b>nótë</b> <i>n.</i> “number”</li>
@@ -1034,7 +1034,7 @@
 
 <ul>
 <li>Note ¹: Though “all” and “each” are distinct words in English, Quenya <i>ilyë</i> “all” is simply the plural form of the adjective <i>ilya</i> “each, every”: <i>ilya elda</i> “each elf” vs. <i>ilyë eldar</i> “all elves”.</li>
-<li>Note ²: <i>métima</i> means “last” in an absolute sense (the last there is) vs. <i>telda</i> which is the last item in a series.</li>
+<li>Note ²: <i>métima</i> means “last” mainly in a temporal or absolute sense (the last there is) vs. <i>telda</i> which is the last item spatially or in a series.</li>
 </ul>
 
 <h2><a id="c6-4-5"></a>6.4.5 Section Summary</h2>
@@ -1566,7 +1566,7 @@ and of the One who is above all thrones for ever.
 <li><b>eressëa</b> <i>adj.</i> “lonely”</li>
 <li><b>ilya</b> <i>adj.</i> “every, each” ¹</li>
 <li><b>ilyë</b> <i>adj.</i> “all [pl.]” ¹</li>
-<li><b>métima</b> <i>adj.</i> “last” ²</li>
+<li><b>métima</b> <i>adj.</i> “last [temporal]” ²</li>
 <li><b>not-</b> <i>v.</i> “to count”
 <ul><li><i>pa.t.</i> *<b>nontë</b> “counted”</li></ul></li>
 <li><b>nótë</b> <i>n.</i> “number”</li>
@@ -1580,7 +1580,7 @@ and of the One who is above all thrones for ever.
 
 <ul>
 <li>Note ¹: Though “all” and “each” are distinct words in English, Quenya <i>ilyë</i> “all” is simply the plural form of the adjective <i>ilya</i> “each, every”: <i>ilya elda</i> “each elf” vs. <i>ilyë eldar</i> “all elves”.</li>
-<li>Note ²: <i>métima</i> means “last” in an absolute sense (the last there is) vs. <i>telda</i> which is the last item in a series.</li>
+<li>Note ²: <i>métima</i> means “last” mainly in a temporal or absolute sense (the last there is) vs. <i>telda</i> which is the last item spatially or in a series.</li>
 </ul>
 
 <p><b><u>Numbers:</u></b></p>
@@ -1719,8 +1719,8 @@ and of the One who is above all thrones for ever.
 <li><i>atan</i> → <i>atalli</i> “some men [humans]”.</li>
 <li><i>nér</i> (<i>ner-</i>) → <i>nelli</i> “some men [males]”.</li>
 <li><span class="advanced-topic">Speculative:</span> <i>cas</i> (<i>car-</i>) → <i>calli</i> “some heads”.</li>
-<li><span class="advanced-topic">Speculative:</span> <i>nat</i> → <i>nalti</i> “some things”.</li>
-<li><span class="advanced-topic">Speculative:</span> <i>hón</i> (<i>hom-</i>) → <i>holmi</i> “some hearts”.</li>
+<li><span class="advanced-topic">Speculative:</span> <i>nat</i> → <i>nateli</i> “some things”.</li>
+<li><span class="advanced-topic">Speculative:</span> <i>hón</i> (<i>hom-</i>) → <i>homeli</i> “some hearts”.</li>
 </ul></li>
 <li><b>Consonantal nouns</b> with stems ending in consonant clusters use <i>-eli</i>:
 <ul>
