--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
@@ -453,7 +453,7 @@
 <li><b>norta-</b> <i>v.</i> “to ride, (lit.) make run”
 <ul><li><i>pa.t.</i> <b>nortanë</b> “rode”</li></ul></li>
 <li><b>nurta-</b> <i>v.</i> “to hide” ¹
-<ul><li><i>pa.t.</i> *<b>nurantë</b> “hid [self]”</li>
+<ul><li><i>pa.t.</i> *<b>nuruntë</b> “hid [self]”</li>
 <li><i>pa.t.</i> *<b>nurtanë</b> “hid [something]”</li></ul></li>
 <li><b>pilin</b> (<b>pilind-</b>) <i>n.</i> “arrow”</li>
 <li>^<b>pimpë</b> <i>n.</i> “tail”</li>
@@ -463,7 +463,7 @@
 <li><b>quinga</b> <i>n.</i> “bow (for shooting)”</li>
 <li><b>ráma</b> <i>n.</i> “wing”</li>
 <li><b>rassë</b> <i>n.</i> “horn” ²</li>
-<li><b>remba</b> <i>n.</i> “net”</li>
+<li><b>rembë</b> <i>n.</i> “net”</li>
 <li><b>remba-</b> <i>v.</i> “to net, trap”
 <ul><li><i>pa.t.</i> *<b>rembanë</b> “netted, trapped”</li></ul></li>
 <li><b>roita-</b> <i>v.</i> “to pursue, chase”
@@ -472,7 +472,7 @@
 </ul>
 
 <ul>
-<li>Note ¹: The verb <i>nurta-</i> “to hide” may be an example of a verb with distinct transitive (<i>nurtanë</i> “hid [something]”) and intransitive (<i>nurantë</i> “hid [self]”) past tenses.</li>
+<li>Note ¹: The verb <i>nurta-</i> “to hide” may be an example of a verb with distinct transitive (<i>nurtanë</i> “hid [something]”) and intransitive (<i>nuruntë</i> “hid [self]”) past tenses.</li>
 <li>Note ²: The word <i>rassë</i> can be used of both the horn of animals and mountains.</li>
 </ul>
 
@@ -644,7 +644,7 @@
 <ul>
 <li><i>mindon</i> + <i>-nna</i> → <i>mindonna</i> “to a tower” rather than **<i>mindonenna</i>.</li>
 <li><i>menel</i> + <i>-llo</i> → <i>menello</i> “from the heavens” rather than **<i>menelello</i>.</li>
-<li><i>cas</i> + <i>-ssë</i> → <i>cassë</i> “in a head”, though <i>caressë</i> is also acceptable.</li>
+<li><i>cas</i> + <i>-ssë</i> → <i>cassë</i> “in a head”, though likely longer forms <i>caressë</i> are more common in this case.</li>
 </ul>
 
 <p>Of these, the locative is most likely to still use a joining vowel, since nouns ending in <i>s</i> typically have stems ending in <i>r</i>, as in <i>cas</i> (<i>car-</i>) “head”. The four cardinal directions <i>númen, hyarmen, rómen, formen</i> “west, south, east, north” are another special case. These drop their final <i>n</i> before appending the directional case suffixes:</p>
@@ -716,7 +716,7 @@
 <li><b>imbi</b> <i>prep.</i> “among [pl.]” ²</li>
 <li><b>inga</b> <i>n.</i> “top”</li>
 <li><b>mi</b> <i>prep.</i> “in” ³</li>
-<li><b>mina</b> <i>prep.</i> “into”</li>
+<li><b>minna</b> <i>prep.</i> “into”</li>
 <li><b>nómë</b> <i>n.</i> “place”</li>
 <li><b>nu</b> <i>prep.</i> “under”</li>
 <li><b>ó</b> <i>prep.</i> “(together) with”</li>
@@ -795,7 +795,7 @@
 <ol class="exercise-list">
 <li><i>Mennelmë i endenna i taurëo.</i></li>
 <li><i>I osto harë imbi ambor.</i></li>
-<li><i>I orcor ménar mina i rotto.</i></li>
+<li><i>I orcor ménar minna i rotto.</i></li>
 <li><i>Cenuvan i hesto lómessë.</i></li>
 <li><i>I atani túler et i mindonillon.</i></li>
 <li><i>I atani nacanter orcor macilínen.</i></li>
@@ -1061,7 +1061,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>norta-</b> <i>v.</i> “to ride, (lit.) make run”
 <ul><li><i>pa.t.</i> <b>nortanë</b> “rode”</li></ul></li>
 <li><b>nurta-</b> <i>v.</i> “to hide” ¹
-<ul><li><i>pa.t.</i> *<b>nurantë</b> “hid [self]”</li>
+<ul><li><i>pa.t.</i> *<b>nuruntë</b> “hid [self]”</li>
 <li><i>pa.t.</i> *<b>nurtanë</b> “hid [something]”</li></ul></li>
 <li><b>pilin</b> (<b>pilind-</b>) <i>n.</i> “arrow”</li>
 <li>^<b>pimpë</b> <i>n.</i> “tail”</li>
@@ -1069,7 +1069,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>quinga</b> <i>n.</i> “bow (for shooting)”</li>
 <li><b>ráma</b> <i>n.</i> “wing”</li>
 <li><b>rassë</b> <i>n.</i> “horn” ²</li>
-<li><b>remba</b> <i>n.</i> “net”</li>
+<li><b>rembë</b> <i>n.</i> “net”</li>
 <li><b>remba-</b> <i>v.</i> “to net, trap”
 <ul><li><i>pa.t.</i> *<b>rembanë</b> “netted, trapped”</li></ul></li>
 <li><b>roita-</b> <i>v.</i> “to pursue, chase”
@@ -1078,7 +1078,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 </ul>
 
 <ul>
-<li>Note ¹: The verb <i>nurta-</i> “to hide” may be an example of a verb with distinct transitive (<i>nurtanë</i> “hid [something]”) and intransitive (<i>nurantë</i> “hid [self]”) past tenses.</li>
+<li>Note ¹: The verb <i>nurta-</i> “to hide” may be an example of a verb with distinct transitive (<i>nurtanë</i> “hid [something]”) and intransitive (<i>nuruntë</i> “hid [self]”) past tenses.</li>
 <li>Note ²: The word <i>rassë</i> can be used of both the horn of animals and mountains.</li>
 </ul>
 
@@ -1094,7 +1094,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>imbi</b> <i>prep.</i> “among [pl.]” ²</li>
 <li><b>inga</b> <i>n.</i> “top”</li>
 <li><b>mi</b> <i>prep.</i> “in” ³</li>
-<li><b>mina</b> <i>prep.</i> “into”</li>
+<li><b>minna</b> <i>prep.</i> “into”</li>
 <li><b>nómë</b> <i>n.</i> “place”</li>
 <li><b>nu</b> <i>prep.</i> “under”</li>
 <li><b>ó</b> <i>prep.</i> “(together) with”</li>
@@ -1155,13 +1155,13 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>quer-</b> <i>v.</i> “to turn”
 <ul><li><i>pa.t.</i> <b>quernë</b> “turned”</li></ul></li>
 <li><b>sav-</b> <i>v.</i> “to believe”
-<ul><li><i>pa.t.</i> *<b>sávë</b> “believe”</li></ul></li>
+<ul><li><i>pa.t.</i> *<b>sávë</b> “believed”</li></ul></li>
 <li><b>senya</b> <i>adj.</i> “usual”</li>
 <li><b>síma</b> <i>n.</i> “imagination”</li>
 <li><b>tenta-</b> <i>v.</i> “to point”
 <ul><li><i>pa.t.</i> <b>tentanë</b> “pointed”</li></ul></li>
 <li>!<b>yuhta-</b> <i>v.</i> “to use”
-<ul><li><i>pa.t.</i> <b>yuntanë</b> “used”</li></ul></li>
+<ul><li><i>pa.t.</i> <b>yuhtanë</b> “used”</li></ul></li>
 </ul>
 
 <h2><a id="c7-6-2"></a>7.6.2 Grammar Summary</h2>
@@ -1238,7 +1238,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 </table>
 </center>
 
-<p><center>
+<center>
 <table>
 <tr><th>E-noun</th><th>Sg.</th><th>Du.</th><th>Part. Pl.</th><th>Pl.</th></tr>
 <tr><td>Allative</td><td><i>lassenna</i></td><td><i>lassenta</i></td><td><i>lasselinna(r)</i></td><td><i>lassennar</i></td></tr>
@@ -1246,7 +1246,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <tr><td>Locative</td><td><i>lassesse</i></td><td><i>lassetse</i></td><td><i>lasselisse(n)</i></td><td><i>lassessen</i></td></tr>
 <tr><td>Instrumental</td><td><i>lassenen</i></td><td><i>lassenten</i></td><td><i>lasselínen</i></td><td><i>lassínen</i></td></tr>
 </table>
-</center></p>
+</center>
 
 <center>
 <table>
