--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
@@ -43,7 +43,7 @@
 <li><b><a href="#c9-3">9.3 Adverbs</a></b>
 <ul>
 <li><b><a href="#c9-3-1">9.3.1 Adverb Use</a></b></li>
-<li><b><a href="#c9-3-2">9.3.2 Vocabulary: Abverbs and Clothing</a></b></li>
+<li><b><a href="#c9-3-2">9.3.2 Vocabulary: Adverbs and Clothing</a></b></li>
 <li><b><a href="#c9-3-3">9.3.3 Section Summary</a></b></li>
 <li><b><a href="#x9-3">Exercise 9.3</a></b></li>
 </ul></li>
@@ -333,7 +333,7 @@
 <li><b>penya</b> <i>adj.</i> “lacking, poor”</li>
 <li><b>sam-</b> <i>v.</i> “to have”
 <ul><li><i>pa.t.</i> <b>sáme</b> “had”</li></ul></li>
-<li><b>tyelpë</b> <i>n.</i> “silver, money”</li>
+<li><b>telpë</b> <i>n.</i> “silver, money”</li>
 </ul>
 
 <h2><a id="c9-1-6"></a>9.1.6 Section Summary</h2>
@@ -371,7 +371,7 @@
 <ol class="exercise-list">
 <li><i>I harma-antaila aran alya.</i></li>
 <li><i>Mancaima armar mirwë.</i></li>
-<li><i>I tyelpë-samila nauco ui penya.</i></li>
+<li><i>I telpë-samila nauco ui penya.</i></li>
 <li><i>Orcor merir tuvë lépima harma.</i></li>
 <li><i>I mapinë macili vanwë.</i></li>
 <li><i>I atani norner minna i lantaina ando.</i></li>
@@ -403,7 +403,7 @@
 </ol>
 
 <ol class="exercise-list" start="7">
-<li><i>I antaula perian penë tyelpë sí.</i></li>
+<li><i>I antaula perian penë telpë sí.</i></li>
 <li><i>Cavaitë mahar harë i coassë.</i></li>
 <li><i>Ilyë mahtailë ohtari qualuvar.</i></li>
 <li><i>Cavinë annar rehtaner i nettion alassë.</i></li>
@@ -414,7 +414,7 @@
 <p>Tengwar answers:</p>
 
 <ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="I antaula perian penë tyelpë sí">I antaula perian penë tyelpë sí</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I antaula perian penë telpë sí">I antaula perian penë telpë sí</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Cavaitë mahar harë i coassë">Cavaitë mahar harë i coassë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Ilyë mahtailë ohtari qualuvar">Ilyë mahtailë ohtari qualuvar</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Cavinë annar rehtaner i nettion alassë">Cavinë annar rehtaner i nettion alassë</span></li>
@@ -449,7 +449,7 @@
 <li><i>nem-</i> “to seem”: <i>nemë i tanë atani amahtië orcor</i> “[it] seems that those men have fought orcs” (PE22/93, 152).</li>
 </ul>
 
-<p>In such impersonal constructions, the purported subject (if there is one) is given in the dative: <i>ore nin</i> “[it] urges to me = I feel an urge”. Tolkien described this impersonal construction in <i>Common Eldarin: Verb Structure</i> from the early 1950s, where he said:</p>
+<p>In such impersonal constructions, the putative subject (if there is one) is given in the dative: <i>ore nin</i> “[it] urges to me = I feel an urge”. Tolkien described this impersonal construction in <i>Common Eldarin: Verb Structure</i> from the early 1950s, where he said:</p>
 
 <blockquote>Where no subject was expressed, or where the “action” was strictly impersonal, as in: "(it) rains, (it) seems," the bare stem of the verb or tense was used without inflexion (PE22/128).</blockquote>
 
@@ -604,7 +604,7 @@
 
 <ul>
 <li><b><a href="#c9-3-1">9.3.1 Adverb Use</a></b></li>
-<li><b><a href="#c9-3-2">9.3.2 Vocabulary: Abverbs and Clothing</a></b></li>
+<li><b><a href="#c9-3-2">9.3.2 Vocabulary: Adverbs and Clothing</a></b></li>
 <li><b><a href="#c9-3-3">9.3.3 Section Summary</a></b></li>
 <li><b><a href="#x9-3">Exercise 9.3</a></b></li>
 </ul>
@@ -664,7 +664,7 @@
 <p>Nevertheless, without this mechanism there is no clear explanation of adverbs like <i>ná márië</i> “be well” and <i>oialë</i> “forever”. I think it is best to retain this mechanism for purposes of Neo Quenya, though in actual sentences I prefer to use either “adjectives as adverbs” or the suffix <i>-vë</i>.</p>
 </div>
 
-<h2><a id="c9-3-2"></a>9.3.2 Vocabulary: Abverbs and Clothing</h2>
+<h2><a id="c9-3-2"></a>9.3.2 Vocabulary: Adverbs and Clothing</h2>
 
 <p>Here are some examples of pure adverbs:</p>
 
@@ -974,7 +974,7 @@
 <p>Translate the following to English:</p>
 
 <ol class="exercise-list">
-<li><i>I súrë ringa lá noa.</i></li>
+<li><i>I súrë ringa lá nöa.</i></li>
 <li><i>I cirma ammaica.</i></li>
 <li><i>I collo ammussë hampion.</i></li>
 <li><i>Mithril arnorna tincoron.</i></li>
@@ -1206,7 +1206,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <li><b>penya</b> <i>adj.</i> “lacking, poor”</li>
 <li><b>sam-</b> <i>v.</i> “to have”
 <ul><li><i>pa.t.</i> <b>sáme</b> “had”</li></ul></li>
-<li><b>tyelpë</b> <i>n.</i> “silver, money”</li>
+<li><b>telpë</b> <i>n.</i> “silver, money”</li>
 </ul>
 
 <p><b><u>Craft:</b></u></p>
@@ -1231,7 +1231,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <li>^<b>tamin</b> <i>n.</i> “forge”</li>
 </ul>
 
-<p><b><u>Abverbs:</b></u></p>
+<p><b><u>Adverbs:</b></u></p>
 
 <ul class="vocab-list">
 <li><b>aqua</b> <i>adv.</i> “fully, completely”</li>
@@ -1332,7 +1332,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 
 <ul class="vocab-list">
 <li><b>loa</b> <i>n.</i> “(seasonal) year”</li>
-<li><b>nóloa</b> <i>v.</i> “yesteryear”</li>
+<li><b>nóloa</b> <i>n.</i> “yesteryear”</li>
 <li><b>coranar</b> <i>n.</i> “(solar) year, sun-round”</li>
 <li><b>yén</b> <i>n.</i> “Elvish long year (144 solar years)”</li>
 <li><b>hrívë</b> <i>n.</i> “winter”</li>
