--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -30,6 +30,7 @@
 <li><b><a href="eldamo-intro-quenya-07.html">Chapter 7</a></b></li>
 <li><b><a href="eldamo-intro-quenya-08.html">Chapter 8</a></b></li>
 <li><b><a href="eldamo-intro-quenya-09.html">Chapter 9</a></b></li>
+<li><b><a href="eldamo-intro-quenya-10.html">Chapter 10</a></b></li>
 </ul>
 
 <center><h1><u>Memrise Vocabulary Courses</u></h1></center>
@@ -42,6 +43,11 @@
 <li><b><a href="https://app.memrise.com/course/6340132/eldamo-intro-quenya-ch-3/">Vocabulary for Chapter 3</a></b></li>
 <li><b><a href="https://app.memrise.com/course/6343426/eldamo-intro-quenya-ch-4/">Vocabulary for Chapter 4</a></b></li>
 <li><b><a href="https://app.memrise.com/course/6350684/eldamo-intro-quenya-ch-5/">Vocabulary for Chapter 5</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6352203/eldamo-intro-quenya-ch-6/">Vocabulary for Chapter 6</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6353711/eldamo-intro-quenya-ch-7/">Vocabulary for Chapter 7</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6357574/eldamo-intro-quenya-ch-8/">Vocabulary for Chapter 8</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6358068/eldamo-intro-quenya-ch-9/">Vocabulary for Chapter 9</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6361771/eldamo-intro-quenya-ch-10/">Vocabulary for Chapter 10</a></b></li>
 </ul>
 
 </body>
