--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
@@ -78,7 +78,7 @@
 
 <p>Up to this point in the course, we have presented three major groups of Quenya verbs: the basic verbs, the u-stem verbs and the a-stem verbs. The discussion of the a-stem verbs have been intentionally simplified, and as previously mentioned they represent a larger set of “hidden verb classes”. The chapter discusses these specialized verb classes in more detail, and how their conjugation into verb tenses differs from the simplified rules we have presented so far in the course.</p>
 
-<p class="advanced-topic">This entire section can be considered an “advanced topic”. As such, the information given here is more technical that other sections of this course, and includes both a description of recommended (Neo) Quenya grammar and of the source material from which those rules are derived.</p>
+<p class="advanced-topic">This entire section can be considered an “advanced topic”. As such, the information given here is more technical that other sections of this course, and includes both a description of recommended (Neo) Quenya grammar and of the source material from which those rules are derived. You can also ignore this entire section and stick to the simplified conjugations described earlier in the course, and you still be correct most of the time.</p>
 
 <h2><a id="c8-1-1"></a>8.1.1 Sources for Verb Classes</h2>
 
@@ -143,7 +143,7 @@
 
 <ul>
 <li>Talat-stem verbs have either half-strong or weak pasts: <i>talta-</i> → <i>talantë</i> vs. <i>sulpa-</i> → <i>sulpanë</i>.</li>
-<li>Depending on their past form, their conjugations aligned with either half-strong formative verbs (see above) or weak derivative verbs (see below).
+<li>Depending on their past form, their conjugations aligned with either half-strong formative verbs (see above) or weak verbs (see below).
 <ul>
 <li>This alignment replaced various archaic aorist and present forms: †<i>tal’ti</i>, †<i>tálata</i> (&lt; *<i>tālatā</i>) or †<i>talata</i> (&lt; *<i>talātā</i>).</li></ul></li>
 </ul>
@@ -152,9 +152,11 @@
 
 <p>The causative verbs are one of the verb classes I refer to as weak verbs (= those with weak pasts). Tolkien himself used the term “weak verb” to refer to any non-basic verb (PE22/113). The causative verbs had the sense “to make X”, such as <i>tulta-</i> “to send (for), summon” = <i>TUL+tā</i> “(lit.) make come”. As such these verbs were invariably transitive with an obligatory direct object (except for cases where they merged with a formative verb, see above). There are two main types of causatives: the ta-causatives (ancient suffix <i>-tā</i>) and the rarer ya-causatives (ancient suffix <i>-yā</i>), such as <i>tulya-</i> “to bring, lead”.</p>
 
-<p>The causatives can be described as “weak” because their tense-forms almost always involve some kind of suffix being added to the stem. In particular, these verbs are among the most likely to have weak pasts: <i>tultanë</i> “sent for”, <i>tulyanë</i> “brought”. This is also the verb class in which <i>ea</i>-presents originated: <i>tultaya</i> &gt; <i>tultëa</i> “is sending for” (PE22/164), with the usual Quenya sound change of <i>aya</i> into <i>ëa</i> (the same change leading to <i>cëantë</i> &lt; <i>cayantē</i> above). The <i>ea</i>-presents also appear for ya-causatives: <i>tulyëa</i> “is bringing” (PE22/164).</p>
+<p>The causatives can be described as “weak” because their tense-forms almost always involve some kind of suffix being added to the stem. In particular, these verbs are among those most likely to have weak pasts: <i>tultanë</i> “sent for”, <i>tulyanë</i> “brought”. This is also the verb class in which <i>ea</i>-presents originated: <i>tultaya</i> &gt; <i>tultëa</i> “is sending for” (PE22/164), with the usual Quenya sound change of <i>aya</i> into <i>ëa</i> (the same change leading to <i>cëantë</i> &lt; <i>cayantē</i> above). The <i>ea</i>-presents also appear for ya-causatives: <i>tulyëa</i> “is bringing” (PE22/164).</p>
 
 <p>One unusual variation for the class of causative verbs is their future forms. In LVS, the futures of causative all have <i>-auva</i> instead of <i>-uva</i>: <i>tultauva</i> “will send for”, <i>tulyauva</i> “will bring” (PE22/164). They are the only verb class with this kind of future form. The only place these <i>auva</i>-futures appear are the 1969 notes in LVS, and as such they may be very late invention on Tolkien’s part. However, the causatives did have specialized future forms in QVS as well (PE22/117): <i>tultáva</i>, though these <i>áva</i>-futures were abandoned.</p>
+
+<p>Another variation are the perfect forms of some causative verbs. There are many examples of causatives verbs whose perfect is formed from their (weak) past tense: <i>tultanë</i> → <i>utultanië</i> (PE22/157); I call these forms the “weak perfect”. Other times they have the simple perfect formation based on directly on the verb stem, as described elsewhere in this course <i>tulta-</i> → <i>utultië</i> (PE22/164). It seems these were two competing tense formations in Tolkien’s mind and it is not clear when one should be used over the other. However, these weak perfect forms can be particularly useful with the (relatively rare) ya-causatives to make them more distinct: <i>tulya-</i> “to bring” → *<i>utulyanië</i> “has brought”.</p>
 
 <p><b>Summary:</b></p>
 
@@ -167,17 +169,17 @@
 
 <h2><a id="c8-1-6"></a>8.1.6 Derivative Verbs</h2>
 
-<p>Derivative verbs are those verbs that are not based on a verbal root. The derivative verbs were not originally verbs at all, but were based on nouns or adjectives that were transformed into verbs, either directly or with the addition of a suffix. Examples of the first include <i>remba-</i> “to net, trap”, which is the noun <i>remba</i> “net” turned into a verb (VT42/12), and <i>cúna-</i> “to bend”, which is the adjective <i>cúna</i> “bent” turned into a verb (MC/223). Examples of suffixed derivative verbs include <i>henta-</i> “to read, scan” = KHEN “eye” + <i>-ta</i> (PE17/77) and <i>móta-</i> “to work” = MŌ “labour” + <i>-ta</i> (LR/373).</p>
+<p>Derivative verbs are those verbs that are not based on a verbal root. The derivative verbs were not originally verbs at all, but were based on nouns or adjectives that were transformed into verbs, either directly or with the addition of a suffix. Examples of the first include <i>remba-</i> “to net, trap”, which is the noun <i>rembë</i> “net” turned into a verb (VT42/12), and <i>cúna-</i> “to bend”, which is the adjective <i>cúna</i> “bent” turned into a verb (MC/223). Examples of suffixed derivative verbs include <i>henta-</i> “to read, scan” = KHEN “eye” + <i>-ta</i> (PE17/77) and <i>móta-</i> “to work” = MŌ “labour” + <i>-ta</i> (LR/373).</p>
 
 <p>Because the derivative verbs are not based on verbal roots, they needed to “borrow” their conjugations from other verb classes. In Tolkien’s later writing, the derivative verb for which we have the most information is <i>henta-</i> (PE17/77), and its conjugations mostly agree with the simplified rules presented above for a-stem verbs.</p>
 
-<p>The big exception is the perfect tense. The attested perfects of derivative verbs all have a “weak perfect” based on their (weak) past tense, such as <i>hentanë</i> → <i>ehentanië</i> (PE17/77), <i>tengwanë</i> → <i>etengwanië</i> (VT49/48). It may be that derivative verbs never use the simple perfect because they have no verbal root on which that perfect can be based. There are also a couple examples of weak perfects among causative verbs, such as <i>utultanië</i>, a variant perfect for the simple perfect <i>utultië</i> from the verb <i>tulta-</i> (PE22/157). However, the derivative verbs seem to be the only class of verbs for which simple perfects are not the norm.</p>
+<p>One possible exception is the perfect tense. Some attested perfects of derivative verbs all have a “weak perfect” based on their (weak) past tense, such as <i>hentanë</i> → <i>ehentanië</i> (PE17/77). Others have a simple perfect like <i>tengwanë</i> → <i>etengwië</i> (VT49/48). This variation between simple and weak perfect may reflect a similar variation within the other major class of weak verbs: the causatives (see above).</p>
 
 <p><b>Summary:</b></p>
 
 <ul>
 <li>Derivative verbs have weak pasts: <i>henta-</i> → <i>hentanë</i>, <i>tengwa-</i> → <i>tengwanë</i>.<ul>
-<li>They also have weak perfects: <i>ehentanië, etengwanië</i>.</li>
+<li>They sometimes have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
 </ul></li>
 <li>Derivative verbs otherwise closely follow the simplified a-stem conjugations described in this course.</li>
 </ul>
@@ -272,12 +274,12 @@
 <tr><td>Present</td><td><i>taltëa</i></td><td>*<i>sulpëa</i></td></tr>
 <tr><td>Future</td><td><i>taltuva</i></td><td>*<i>sulpuva</i></td></tr>
 <tr><td>Past</td><td><i>atalantë</i></td><td><i>sulpanë</i> ¹</td></tr>
-<tr><td>Perfect</td><td><i>ataltië</i></td><td>*<i>usulpanië</i> ¹</td></tr>
+<tr><td>Perfect</td><td><i>ataltië</i></td><td>*<i>usulpië</i></td></tr>
 <tr><td>Gerund</td><td><i>taltië</i></td><td><i>sulpië</i></td></tr>
 </table>
 
 <ul>
-<li>Note ¹: The original half-strong past of <i>sulpa-</i> would be †<i>sulumpë</i>, but it was displaced by the weak past <i>sulpanë</i>. <span class="advanced-topic">Speculative:</span> Presumably its perfect likewise became a weak perfect and its conjugations aligned with the derivative verbs (see below).</li>
+<li>Note ¹: The original half-strong past of <i>sulpa-</i> would be †<i>sulumpë</i>, but it was displaced by the weak past <i>sulpanë</i>.</li>
 </ul>
 
 <p><b><u>Causative Verbs (weak):</u></b></p>
@@ -307,13 +309,14 @@
 <tr><td>Present</td><td><i>hentëa</i></td><td><i>tengwëa</i></td></tr>
 <tr><td>Future</td><td><i>hentuva</i></td><td>*<i>tenguva</i> ²</td></tr>
 <tr><td>Past</td><td><i>hentanë</i></td><td><i>tengwanë</i></td></tr>
-<tr><td>Perfect</td><td><i>ehentanië</i></td><td><i>etengwanië</i></td></tr>
+<tr><td>Perfect</td><td><i>ehentanië</i></td><td><i>etengwië</i> ³</td></tr>
 <tr><td>Gerund</td><td><i>hentië</i></td><td><i>tengwië</i></td></tr>
 </table>
 
 <ul>
 <li>Note ¹: Through a bizarre coincidence, the two best described derivative verbs in Tolkien’s later writing both mean “read”: <i>henta-</i> also means “scan” (PE17/77), whereas <i>tengwa-</i> means only “read written material” (VT49/48).</li>
 <li>Note ²: Since <i>wu</i> is not a valid combination in Quenya, the future suffix would replace the consonant <i>w</i>.</li>
+<li>Note ³: Like causatives, the derivative verbs can have both weak perfects and simple perfects.</li>
 </ul>
 
 <h2><a id="c8-1-8"></a>8.1.8 Neo-Quenya Recommendations</h2>
@@ -357,13 +360,13 @@
 <ul>
 <li><b>Past:</b> Use weak pasts: <i>tultanë, tulyanë</i>.</li>
 <li><b>Future:</b> Have <i>auva</i>-futures: <i>tultauva, tulyauva</i> (for simplicity this can be ignored).</li>
-<li><b>Perfect:</b> Often have weak perfects (most useful for ya-causatives): <i>utulyanië</i>.</li>
+<li><b>Perfect:</b> Sometimes have weak perfects (most useful for ya-causatives): <i>utulyanië</i>.</li>
 <li><b>Ya-formatives:</b> Lose their <i>y</i> in gerunds: <i>tulië</i>.</li>
 </ul></li>
 <li><b>Derivative Verbs:</b> Weak <i>henta-, tengwa-</i>.
 <ul>
 <li><b>Past:</b> Use weak pasts: <i>hentanë, tengwanë</i>.</li>
-<li><b>Perfect:</b> Also have weak perfects: <i>ehentanië, etengwanië</i>.</li>
+<li><b>Perfect:</b> Sometimes have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
 </ul></li>
 </ul>
 
@@ -419,7 +422,7 @@
 
 <ul>
 <li>Note ¹: These two verbs superficially resemble a-verbs, but are actually derivative verbs since they have long vowels in the verb stem. This matters only for their (weak) perfect tenses: *<i>ucúnanië</i>, *<i>omótanië</i>.</li>
-<li>Note ²: Though originally a talat-stem verb, it had become a weak verb. This matters only for its (weak) past and (weak) perfect: <i>sulpanë</i>, *<i>usulpanië</i>.</li>
+<li>Note ²: Though originally a talat-stem verb, it had become a weak verb. This matters only for its (weak) past: <i>sulpanë</i>.</li>
 </ul>
 
 <h2><a id="x8-1"></a>Exercise 8.1</h2>
@@ -437,7 +440,7 @@
 <li>Aorist <i>orya</i> “rises”, past <i>oronyë</i> “rose”</li>
 <li>Aorist <i>tulta</i> “summons”, past <i>tultanë</i> “summoned”</li>
 <li>Aorist <i>caita</i> “lies (down)”, past <i>cainë</i> “lay (down)”</li>
-<li>Aorist <i>sulpa</i> “laps up”, perfect <i>usulpanië</i> “has lapped up”</li>
+<li>Aorist <i>sulpa</i> “laps up”, perfect <i>sulpanë</i> “lapped up”</li>
 <li>Aorist <i>talta</i> “collapses”, past <i>talantë</i> “collapsed”</li>
 </ol>
 
@@ -456,18 +459,18 @@
 
 <h2><a id="a8-1"></a>Answer Key 8.1 [temporary location]</h2>
 
-<ol class="exercise-list">
+<ol>
 <li>A-verb: Aorist <i>ala</i> “grows”, <u>present <i>álëa</i> “grows”</u>, future <i>aluva</i> “will grow”, <u>past <i>alanë</i> “grew”, perfect <i>(al)álië</i> “has grown”</u></li>
 <li>Ta-formative: Aorist <i>auta</i> “departs”, <u>present <i>autëa</i> “is departing”, future <i>autuva</i> “will depart”</u>, past <i>vánë</i> “departed”, <u>perfect <i>avánië</i> “has departed”</u></li>
 <li>Derivative: Aorist <i>henta</i> “scans”, <u>present <i>hentëa</i> “is scanning”, future <i>hentuva</i> “will scan”, past <i>hentanë</i> “scanned”</u>, perfect <i>ehentanië</i> “has scanned”</li>
 <li>Ya-causative: Aorist <i>tulya</i> “brings”, <u>present <i>tulyëa</i> “is bringing”, future <i>tulyauva</i> “will bring”</u>, past <i>tulyanë</i> “brought”, <u>perfect <i>utulyanië</i> “has brought” (or <i>utúlië</i>)</u></li>
 <li>Ta-formative: Aorist <i>nahta</i> “slays”, <u>present <i>nahtëa</i> “is slaying”, future <i>nahtuva</i> “will slay”</u>, past <i>nacantë</i> “slayed”, <u>perfect <i>anahtië</i> “has slain”</u></li>
 <li>A-verb: Aorist <i>fara</i> “hunts”, present <i>fárëa</i> “is hunting”, <u>future <i>faruva</i> “will hunt”, past <i>faranë</i> “hunted”, perfect <i>afárië</i> “has hunted”</u></li>
-<li>Derivative: Aorist <i>tengwa</i> “reads (writing)”, <u>present <i>tengwëa</i> “is reading (writing)”, future <i>tenguva</i> “will read (writing)”</u>, past <i>tengwanë</i> “read (writing)”, <u>perfect <i>etengwanië</i> “has read (writing)”</u></li>
+<li>Derivative: Aorist <i>tengwa</i> “reads (writing)”, <u>present <i>tengwëa</i> “is reading (writing)”, future <i>tenguva</i> “will read (writing)”</u>, past <i>tengwanë</i> “read (writing)”, <u>perfect <i>etengwië</i> “has read (writing)”</u></li>
 <li>Ya-formative: Aorist <i>orya</i> “rises”, <u>present <i>órëa</i> (or <i>oryëa</i>) “is rising”, future <i>oryuva</i> “will rise”</u>, past <i>oronyë</i> “rose”, <u>perfect <i>(or)órië</i> “has risen”</u></li>
 <li>Ta-causative: Aorist <i>tulta</i> “summons”, <u>present <i>tultëa</i> “is summoning”, future <i>tultauva</i> “will summon”</u>, past <i>tultanë</i> “summoned”, <u>perfect <i>utultië</i> “has summoned” (or <i>utultanië</i>)</u></li>
 <li>Ta-formative: Aorist <i>caita</i> “lies (down)”, <u>present <i>caitëa</i> “is lying (down)”, future <i>caituva</i> “will lie (down)”</u>, past <i>cainë</i> “lay (down)”, <u>perfect <i>acaitië</i> “has layed (down)”</u></li>
-<li>Talat-stem (as derivative): Aorist <i>sulpa</i> “laps up”, <u>present <i>sulpëa</i> “is lapping up”, future <i>sulpuva</i> “will lap up”, past <i>sulpunë</i> “lapped up”</u>, perfect <i>usulpanië</i> “has lapped up”</li>
+<li>Talat-stem (as weak): Aorist <i>sulpa</i> “laps up”, <u>present <i>sulpëa</i> “is lapping up”, future <i>sulpuva</i> “will lap up”</u>, past <i>sulpunë</i> “lapped up”, <u>perfect <i>usulpanië</i> “has lapped up”</u></li>
 <li>Talat-stem (as ta-formative): Aorist <i>talta</i> “collapses”, <u>present <i>taltëa</i> “is collapsing”, future <i>taltuva</i> “will collapse”</u>, past <i>talantë</i> “collapsed”, <u>perfect <i>ataltië</i> “has collapsed”</u></li>
 </ol>
 
@@ -592,7 +595,7 @@
 <li><b>alassë</b> <i>n.</i> “happiness”</li>
 <li>!<b>alassëa</b> <i>adj.</i> “happy”</li>
 <li><b>alma</b> <i>n.</i> “good fortune”</li>
-<li><b>awalda</b> <i>adj.</i> “excited”</li>
+<li><b>avalda</b> [<b>w</b>] <i>adj.</i> “excited”</li>
 <li><b>estel</b> <i>n.</i> “hope, faith”</li>
 <li><b>fasta-</b> <i>v.</i> “to please”
 <ul><li><i>pa.t.</i> *<b>fastanë</b> “pleased”</li></ul></li>
@@ -632,7 +635,7 @@
 <li><b>hanquenta</b> <i>n.</i> “answer”</li>
 <li>!<b>hanquet-</b> <i>v.</i> “to answer”
 <ul><li><i>pa.t.</i> <b>hanquentë</b> “answered”</li></ul></li>
-<li><b>ma</b> <i>adv.</i> “question word” ¹</li>
+<li><b>ma</b> <i>adv.</i> “(question word)” ¹</li>
 <li><b>mallo</b> <i>adv.</i> “whence”</li>
 <li>!<b>malumë</b> <i>adv.</i> “when”</li>
 <li><b>man</b> <i>pron.</i> “who”</li>
@@ -968,7 +971,7 @@ of the sweet mead in lofty halls ...
 
 <ul>
 <li>Note ¹: These two verbs superficially resemble a-verbs, but are actually derivative verbs since they have long vowels in the verb stem. This matters only for their (weak) perfect tenses: *<i>ucúnanië</i>, *<i>omótanië</i>.</li>
-<li>Note ²: Though originally a talat-stem verb, it had become a weak verb. This matters only for its (weak) past and (weak) perfect: <i>sulpanë</i>, *<i>usulpanië</i>.</li>
+<li>Note ²: Though originally a talat-stem verb, it had become a weak verb. This matters only for its (weak) past: <i>sulpanë</i>.</li>
 </ul>
 
 <p><b><u>Questions and Answers:</b></u></p>
@@ -979,7 +982,7 @@ of the sweet mead in lofty halls ...
 <li><b>hanquenta</b> <i>n.</i> “answer”</li>
 <li>!<b>hanquet-</b> <i>v.</i> “to answer”
 <ul><li><i>pa.t.</i> <b>hanquentë</b> “answered”</li></ul></li>
-<li><b>ma</b> <i>adv.</i> “question word” ¹</li>
+<li><b>ma</b> <i>adv.</i> “(question word)” ¹</li>
 <li><b>mallo</b> <i>adv.</i> “whence”</li>
 <li>!<b>malumë</b> <i>adv.</i> “when”</li>
 <li><b>man</b> <i>pron.</i> “who”</li>
@@ -1008,7 +1011,7 @@ of the sweet mead in lofty halls ...
 <li><b>alassë</b> <i>n.</i> “happiness”</li>
 <li>!<b>alassëa</b> <i>adj.</i> “happy”</li>
 <li><b>alma</b> <i>n.</i> “good fortune”</li>
-<li><b>awalda</b> <i>adj.</i> “excited”</li>
+<li><b>avalda</b> [<b>w</b>] <i>adj.</i> “excited”</li>
 <li><b>estel</b> <i>n.</i> “hope, faith”</li>
 <li><b>fasta-</b> <i>v.</i> “to please”
 <ul><li><i>pa.t.</i> *<b>fastanë</b> “pleased”</li></ul></li>
@@ -1102,13 +1105,13 @@ of the sweet mead in lofty halls ...
 <ul>
 <li><b>Past:</b> Use weak pasts: <i>tultanë, tulyanë</i>.</li>
 <li><b>Future:</b> Have <i>auva</i>-futures: <i>tultauva, tulyauva</i> (for simplicity this can be ignored).</li>
-<li><b>Perfect:</b> Often have weak perfects (most useful for ya-causatives): <i>utulyanië</i>.</li>
+<li><b>Perfect:</b> Sometimes have weak perfects (most useful for ya-causatives): <i>utulyanië</i>.</li>
 <li><b>Ya-formatives:</b> Lose their <i>y</i> in gerunds: <i>tulië</i>.</li>
 </ul></li>
 <li><b>Derivative Verbs:</b> Weak <i>henta-, tengwa-</i>.
 <ul>
 <li><b>Past:</b> Use weak pasts: <i>hentanë, tengwanë</i>.</li>
-<li><b>Perfect:</b> Also have weak perfects: <i>ehentanië, etengwanië</i>.</li>
+<li><b>Perfect:</b> Sometimes have weak perfects: <i>ehentanië</i> vs. <i>etengwië</i>.</li>
 </ul></li>
 </ul>
 
